sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Allowance_Approver__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allowance Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>