sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Company_Division__c.field-meta.xml
<CustomField>
    <fullName>Company_Division__c</fullName>
    <label>Company Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Fresh Life Initiative Limited</fullName>
            </value>
            <value>
                <fullName>Sanergy Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>