sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Current_Status_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_End_Date__c</fullName>
    <label>Current Status End Date</label>
    <type>Date</type>
</CustomField>