sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Issued__c</fullName>
    <description>Date Issued</description>
    <inlineHelpText>Date Issued</inlineHelpText>
    <label>Date Issued</label>
    <type>Date</type>
</CustomField>