sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <description>Date Received</description>
    <inlineHelpText>Date Received</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>