sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Department_Unit__c.field-meta.xml
<CustomField>
    <fullName>Department_Unit__c</fullName>
    <description>Department Unit</description>
    <label>Department Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>​Agricultural Products</fullName>
            </value>
            <value>
                <fullName>Analysis &amp; Reporting</fullName>
            </value>
            <value>
                <fullName>Assets &amp; Facilities Maintenance</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>By-Products Development</fullName>
            </value>
            <value>
                <fullName>Engineering Support Services</fullName>
            </value>
            <value>
                <fullName>ESH</fullName>
            </value>
            <value>
                <fullName>Fleet Management</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Maintenance &amp; Support</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>New Products​</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Projects(CAPEX)</fullName>
            </value>
            <value>
                <fullName>Quality Assuarance</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Specifications &amp; Sourcing</fullName>
            </value>
            <value>
                <fullName>Systems Development</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>