sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <description>Academic Qualifications</description>
    <inlineHelpText>Academic Qualifications</inlineHelpText>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Masters</fullName>
            </value>
            <value>
                <fullName>2. Bachelors Degree</fullName>
            </value>
            <value>
                <fullName>3. Diploma</fullName>
            </value>
            <value>
                <fullName>4. Certificate</fullName>
            </value>
            <value>
                <fullName>5. High School</fullName>
            </value>
            <value>
                <fullName>6. Primary School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>