sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Employee_Active__c.field-meta.xml
<CustomField>
    <fullName>Employee_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Employee Status</description>
    <label>Employee Active</label>
    <type>Checkbox</type>
</CustomField>