sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Employee_Image__c.field-meta.xml
<CustomField>
    <fullName>Employee_Image__c</fullName>
    <label>Employee Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>