sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Employee_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Employee_Image_URL__c</fullName>
    <label>Employee Image URL</label>
    <type>Url</type>
</CustomField>