sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Employee_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Middle_Name__c</fullName>
    <label>Employee Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>