sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Employee_Role_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Employee_Role_Grouping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Role Grouping</label>
    <referenceTo>Employee_Role_Groupings__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>