sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Employee_SF_Account__c.field-meta.xml
<CustomField>
    <fullName>Employee_SF_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee SF Account</description>
    <inlineHelpText>Employee SF Account</inlineHelpText>
    <label>Employee SF Account</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_SF_Account</relationshipName>
    <type>Lookup</type>
</CustomField>