sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Employment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Employment_Start_Date__c</fullName>
    <description>Employment Start Date</description>
    <label>Employment Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>