sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <description>Employment Status</description>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Pending Onboarding</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Probationary Contract</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Fellow</fullName>
            </value>
            <value>
                <fullName>Fixed Term Contract</fullName>
            </value>
            <value>
                <fullName>Pending Activation</fullName>
                <default>true</default>
                <label>Pending Activation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>