sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Home_Email__c.field-meta.xml
<CustomField>
    <fullName>Home_Email__c</fullName>
    <description>Home Email</description>
    <inlineHelpText>Home Email</inlineHelpText>
    <label>Home Email</label>
    <type>Email</type>
</CustomField>