sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/HR_Number__c.field-meta.xml
<CustomField>
    <fullName>HR_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <externalId>true</externalId>
    <label>HR Employee Id</label>
    <type>AutoNumber</type>
</CustomField>