sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/HR_Unique_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>HR_Unique_Record_ID__c</fullName>
    <label>HR Unique Record ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>