sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Identification_Document__c.field-meta.xml
<CustomField>
    <fullName>Identification_Document__c</fullName>
    <description>Type of Identification Document</description>
    <label>Identification Document</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National ID</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>