sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Identification_Number__c</fullName>
    <description>Identification Number</description>
    <label>Identification Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>