sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Accounts Clerk</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Assistant 1</fullName>
            </value>
            <value>
                <fullName>Assistant Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Supervisor</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Chief Financial Officer</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Design Specialist</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Driver 1</fullName>
            </value>
            <value>
                <fullName>Driver 2</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Engineer 1</fullName>
            </value>
            <value>
                <fullName>Engineer 3</fullName>
            </value>
            <value>
                <fullName>Fellow</fullName>
            </value>
            <value>
                <fullName>IT Help Desk Technician</fullName>
            </value>
            <value>
                <fullName>Junior Accountant</fullName>
            </value>
            <value>
                <fullName>Junior Systems Administrator</fullName>
            </value>
            <value>
                <fullName>Laboratory Coordinator</fullName>
            </value>
            <value>
                <fullName>Maintenance Partner</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Monitoring &amp; Evaluation Assistant</fullName>
            </value>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Partner 1</fullName>
            </value>
            <value>
                <fullName>Partner 2</fullName>
            </value>
            <value>
                <fullName>Partner 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>