sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/KRA_PIN__c.field-meta.xml
<CustomField>
    <fullName>KRA_PIN__c</fullName>
    <description>KRA PIN</description>
    <inlineHelpText>KRA PIN</inlineHelpText>
    <label>KRA PIN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>