sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Leave_Accrual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_Accrual_Start_Date__c</fullName>
    <label>Leave Accrual Start Date</label>
    <type>Date</type>
</CustomField>