sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Leave_Group__c.field-meta.xml
<CustomField>
    <fullName>Leave_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Group</label>
    <referenceTo>Leave_Group__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>