sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Length_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Service__c</fullName>
    <description>Length of Service</description>
    <formula>TEXT(Year( Today())- Year(Employment_Start_Date__c  )) &amp;&quot; &quot;&amp;&quot;years &quot;&amp;&quot; &quot;&amp;
TEXT(Month( Today())-Month(  Employment_Start_Date__c  )) &amp;&quot; &quot;&amp;&quot;months&quot;&amp;&quot; &quot;&amp;
TEXT(Day(Today())-Day(  Employment_Start_Date__c  ))&amp;&quot; &quot;&amp;&quot;days&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Length of Service</inlineHelpText>
    <label>Length of Service</label>
    <type>Text</type>
</CustomField>