sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee Line Manager</description>
    <label>Line Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Line_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>