sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <description>Nationality</description>
    <inlineHelpText>Nationality</inlineHelpText>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nationalities_List</valueSetName>
    </valueSet>
</CustomField>