sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/NHIF_Number__c.field-meta.xml
<CustomField>
    <fullName>NHIF_Number__c</fullName>
    <description>NHIF PIN</description>
    <inlineHelpText>NHIF PIN</inlineHelpText>
    <label>NHIF PIN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>