sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/NSSF_PIN__c.field-meta.xml
<CustomField>
    <fullName>NSSF_PIN__c</fullName>
    <description>NSSF PIN</description>
    <inlineHelpText>NSSF PIN</inlineHelpText>
    <label>NSSF PIN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>