sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Other_Academic_Qualification_1__c.field-meta.xml
<CustomField>
    <fullName>Other_Academic_Qualification_1__c</fullName>
    <description>Other Academic Qualification (1)</description>
    <inlineHelpText>Other Academic Qualification (1)</inlineHelpText>
    <label>Other Academic Qualification (1)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>