sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Other_Academic_Qualification_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Academic_Qualification_2__c</fullName>
    <description>Other Academic Qualification (2)</description>
    <inlineHelpText>Other Academic Qualification (2)</inlineHelpText>
    <label>Other Academic Qualification (2)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>