sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Other_Academic_Qualification_3__c.field-meta.xml
<CustomField>
    <fullName>Other_Academic_Qualification_3__c</fullName>
    <description>Other Academic Qualification (3)</description>
    <inlineHelpText>Other Academic Qualification (3)</inlineHelpText>
    <label>Other Academic Qualification (3)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>