sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_No__c</fullName>
    <description>Passport No.</description>
    <inlineHelpText>Passport No.</inlineHelpText>
    <label>Passport No.</label>
    <length>18</length>
    <type>Text</type>
</CustomField>