sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Payroll_ID__c.field-meta.xml
<CustomField>
    <fullName>Payroll_ID__c</fullName>
    <description>Payroll ID</description>
    <inlineHelpText>Payroll ID</inlineHelpText>
    <label>Payroll ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>