sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Preferred_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Payment_Method__c</fullName>
    <description>Preferred Payment Method</description>
    <inlineHelpText>Preferred Payment Method</inlineHelpText>
    <label>Preferred Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>