sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <label>Primary Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kilimani</fullName>
            </value>
            <value>
                <fullName>Mukuru</fullName>
            </value>
            <value>
                <fullName>Kinanie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>