sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <description>Primary Phone Contact</description>
    <label>Primary Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>