sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Probation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Probation_End_Date__c</fullName>
    <description>Probation End Date</description>
    <inlineHelpText>Probation End Date</inlineHelpText>
    <label>Probation End Date</label>
    <type>Date</type>
</CustomField>