sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture__c</fullName>
    <formula>IMAGE(&quot;https://26d2cfa1970920cb0c9f-e476f77643361d94b1af81fa4ffb5ea7.ssl.cf1.rackcdn.com/photos/&quot;  &amp;  HR_Unique_Record_ID__c  &amp; &quot;-0-4.jpg&quot;, &quot;Missing&quot;,150,150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Picture</label>
    <type>Text</type>
</CustomField>