sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Sanergy_Department__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sanergy Department</label>
    <referenceTo>Sanergy_Department__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>